@@ -82,20 +82,10 @@ public abstract class BrutishItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(),
-							Map.of("body",
-									new Modelbrutish_garment(
-											Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).Body,
-									"left_arm",
-									new Modelbrutish_garment(
-											Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).LeftArm,
-									"right_arm",
-									new Modelbrutish_garment(
-											Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).RightArm,
-									"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
-									new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelbrutish_garment(Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).Body,
+							"left_arm", new Modelbrutish_garment(Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelbrutish_garment(Minecraft.getInstance().getEntityModels().bakeLayer(Modelbrutish_garment.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
