@@ -93,16 +93,10 @@ public abstract class SpectralItem extends ArmorItem {
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public HumanoidModel getArmorModel(LivingEntity living, ItemStack stack, EquipmentSlot slot, HumanoidModel defaultModel) {
-					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body",
-							new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).Body,
-							"left_arm",
-							new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).LeftArm,
-							"right_arm",
-							new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).RightArm,
-							"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg",
-							new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
+					HumanoidModel armorModel = new HumanoidModel(new ModelPart(Collections.emptyList(), Map.of("body", new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).Body, "left_arm",
+							new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).LeftArm, "right_arm",
+							new Modelspectral_cloak(Minecraft.getInstance().getEntityModels().bakeLayer(Modelspectral_cloak.LAYER_LOCATION)).RightArm, "head", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "hat",
+							new ModelPart(Collections.emptyList(), Collections.emptyMap()), "right_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()), "left_leg", new ModelPart(Collections.emptyList(), Collections.emptyMap()))));
 					armorModel.crouching = living.isShiftKeyDown();
 					armorModel.riding = defaultModel.riding;
 					armorModel.young = living.isBaby();
